--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,6 +38,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Law, John, 1671-1729 -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: "The Mississippi Bubble\r\nHow the Star of Good Fortune Rose and Set and Rose\
   \ Again, by a Woman's Grace, for One John Law of Lauriston"
 url: http://www.gutenberg.org/ebooks/14001
